Bug 1995208 - initial annotations for verify-standalone. r=ci-and-tooling,media-playback-reviewers,credential-management-reviewers,sessionstore-reviewers,tabbrowser-reviewers,places-reviewers,dom-storage-reviewers,urlbar-reviewers,profiles-reviewers,layout-reviewers,mtigley,karlt,jari,aryx,jhirsch,sthompson,dholbert
Differential Revision: https://phabricator.services.mozilla.com/D269287

UltraBlame original commit: 5b6711a01b05f17f141ec3242f7c8ef7fdf808db

--- a/accessible/tests/browser/hittest/browser.toml
+++ b/accessible/tests/browser/hittest/browser.toml
@@ -113,6 +113,46 @@ browser_test_browser
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 browser_test_general
@@ -243,6 +283,46 @@ js
 browser_test_zoom
 .
 js
+"
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+24
+.
+04
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+verify
+-
+standalone
 "
 ]
 [
