--- a/accessible/tests/browser/scroll/browser.toml
+++ b/accessible/tests/browser/scroll/browser.toml
@@ -83,6 +83,46 @@ browser_test_scrollTo
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 browser_test_scroll_bounds
