--- a/accessible/tests/browser/text/browser.toml
+++ b/accessible/tests/browser/text/browser.toml
@@ -108,6 +108,46 @@ browser_text
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 browser_text_caret
