--- a/accessible/tests/browser/tree/browser.toml
+++ b/accessible/tests/browser/tree/browser.toml
@@ -173,6 +173,17 @@ browser_lazy_tabs
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+verify
+-
+standalone
+"
+]
 [
 "
 browser_link
@@ -183,6 +194,13 @@ js
 [
 "
 browser_media
+.
+js
+"
+]
+[
+"
+browser_root_element
 .
 js
 "
@@ -239,13 +257,6 @@ js
 [
 "
 browser_view_transition
-.
-js
-"
-]
-[
-"
-browser_root_element
 .
 js
 "
