--- a/browser/base/content/test/about/browser.toml
+++ b/browser/base/content/test/about/browser.toml
@@ -126,6 +126,46 @@ browser_aboutDialog_distribution
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+msix
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 browser_aboutNetError
@@ -322,6 +362,14 @@ skip
 if
 =
 [
+"
+debug
+&
+&
+verify
+-
+standalone
+"
 "
 os
 =
