--- a/browser/base/content/test/captivePortal/browser.toml
+++ b/browser/base/content/test/captivePortal/browser.toml
@@ -103,6 +103,20 @@ browser_captivePortal_certErrorUI
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+debug
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 browser_captivePortal_https_only
