--- a/browser/base/content/test/general/browser.toml
+++ b/browser/base/content/test/general/browser.toml
@@ -2950,6 +2950,20 @@ perwindowpb
 js
 "
 ]
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
 skip
 -
 if
@@ -2966,21 +2980,12 @@ os
 win
 '
 "
+"
+verify
+-
+standalone
+"
 ]
-#
-DO
-NOT
-ADD
-MORE
-TESTS
-HERE
-.
-USE
-A
-TOPICAL
-DIRECTORY
-INSTEAD
-.
 [
 "
 browser_save_link_when_window_navigates
