--- a/browser/base/content/test/webrtc/browser.toml
+++ b/browser/base/content/test/webrtc/browser.toml
@@ -512,6 +512,17 @@ js
 https_first_disabled
 =
 true
+skip
+-
+if
+=
+[
+"
+verify
+-
+standalone
+"
+]
 [
 "
 browser_devices_get_user_media_in_frame
@@ -530,10 +541,39 @@ if
 "
 debug
 "
-]
 #
 bug
 1369731
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+15
+.
+30
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
+"
+#
+Bug
+1989731
+]
 [
 "
 browser_devices_get_user_media_in_xorigin_frame
@@ -1095,6 +1135,11 @@ debug
 #
 Bug
 1775945
+"
+verify
+-
+standalone
+"
 ]
 [
 "
