--- a/browser/components/asrouter/tests/browser/browser.toml
+++ b/browser/components/asrouter/tests/browser/browser.toml
@@ -127,6 +127,43 @@ os
 =
 =
 '
+linux
+'
+&
+&
+os_version
+=
+=
+'
+24
+.
+04
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+socketprocess_networking
+&
+&
+verify
+-
+standalone
+"
+"
+os
+=
+=
+'
 mac
 '
 &
@@ -500,6 +537,13 @@ js
 ]
 [
 "
+browser_backup_restore_spotlight
+.
+js
+"
+]
+[
+"
 browser_bookmarks_bar_button
 .
 js
@@ -712,13 +756,6 @@ true
 [
 "
 browser_trigger_messagesLoaded
-.
-js
-"
-]
-[
-"
-browser_backup_restore_spotlight
 .
 js
 "
