--- a/browser/components/customizableui/test/browser.toml
+++ b/browser/components/customizableui/test/browser.toml
@@ -680,6 +680,17 @@ browser_941083_invalidate_wrapper_cache_createWidget
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+verify
+-
+standalone
+"
+]
 [
 "
 browser_942581_unregisterArea_keeps_placements
@@ -952,6 +963,49 @@ browser_952963_areaType_getter_no_area
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+24
+.
+04
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+socketprocess_networking
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 browser_956602_remove_special_widget
@@ -1150,6 +1204,49 @@ browser_987177_destroyWidget_xul
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+24
+.
+04
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+socketprocess_networking
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 browser_987177_xul_wrapper_updating
@@ -1197,6 +1294,80 @@ js
 browser_993322_widget_notoolbar
 .
 js
+"
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+24
+.
+04
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+swgl
+&
+&
+verify
+-
+standalone
+"
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86
+'
+&
+&
+opt
+&
+&
+verify
+-
+standalone
 "
 ]
 [
@@ -1660,6 +1831,52 @@ js
 browser_registerArea
 .
 js
+"
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+24
+.
+04
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+a11y_checks
+&
+&
+swgl
+&
+&
+verify
+-
+standalone
 "
 ]
 [
