--- a/browser/components/genai/tests/browser/browser.toml
+++ b/browser/components/genai/tests/browser/browser.toml
@@ -109,6 +109,11 @@ if
 =
 [
 "
+verify
+-
+standalone
+"
+"
 os
 =
 =
@@ -131,7 +136,7 @@ processor
 =
 =
 '
-x86_64
+x86
 '
 &
 &
@@ -195,7 +200,7 @@ processor
 =
 =
 '
-x86
+x86_64
 '
 &
 &
@@ -231,6 +236,46 @@ js
 browser_chat_telemetry
 .
 js
+"
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+verify
+-
+standalone
 "
 ]
 [
