--- a/browser/components/newtab/test/browser/browser.toml
+++ b/browser/components/newtab/test/browser/browser.toml
@@ -145,3 +145,46 @@ browser_sponsored_annotation
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+socketprocess_networking
+&
+&
+verify
+-
+standalone
+"
+]
