--- a/browser/components/privatebrowsing/test/browser/browser.toml
+++ b/browser/components/privatebrowsing/test/browser/browser.toml
@@ -313,6 +313,17 @@ browser_privatebrowsing_downloadLastDir
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+verify
+-
+standalone
+"
+]
 [
 "
 browser_privatebrowsing_downloadLastDir_c
