--- a/browser/components/profiles/tests/browser/browser.toml
+++ b/browser/components/profiles/tests/browser/browser.toml
@@ -153,6 +153,37 @@ os_version
 '
 &
 &
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+verify
+-
+standalone
+"
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+24
+.
+04
+'
+&
+&
 processor
 =
 =
@@ -192,7 +223,7 @@ os_version
 '
 11
 .
-26100
+2009
 '
 &
 &
@@ -216,7 +247,41 @@ os_version
 '
 11
 .
-2009
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86
+'
+&
+&
+debug
+&
+&
+verify
+-
+standalone
+"
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
 '
 &
 &
@@ -240,6 +305,36 @@ browser_delete_profile_page_test
 js
 "
 ]
+[
+"
+browser_desktop_shortcut_test
+.
+js
+"
+]
+run
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+"
+]
+#
+Desktop
+shortcuts
+are
+only
+supported
+on
+Windows
+.
 [
 "
 browser_edit_profile_test
@@ -505,6 +600,23 @@ browser_test_current_theme_from_amo
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+"
+]
+#
+Bug
+1994086
 [
 "
 browser_test_last_tab
@@ -512,6 +624,23 @@ browser_test_last_tab
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+"
+]
+#
+Bug
+1994086
 [
 "
 browser_test_nimbus_feature
