--- a/browser/components/sidebar/tests/browser/browser.toml
+++ b/browser/components/sidebar/tests/browser/browser.toml
@@ -417,6 +417,52 @@ browser_toolbar_sidebar_button
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+24
+.
+04
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+a11y_checks
+&
+&
+swgl
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 browser_tools_migration
