--- a/browser/components/tabbrowser/test/browser/tabs/browser.toml
+++ b/browser/components/tabbrowser/test/browser/tabs/browser.toml
@@ -209,6 +209,11 @@ if
 =
 [
 "
+verify
+-
+standalone
+"
+"
 os
 =
 =
@@ -3811,6 +3816,48 @@ browser_tab_splitview
 .
 js
 "
+]
+[
+"
+browser_tab_splitview_contextmenu
+.
+js
+"
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+"
+#
+Bug
+1994508
 ]
 [
 "
