--- a/browser/components/urlbar/tests/engagementTelemetry/browser/browser.toml
+++ b/browser/components/urlbar/tests/engagementTelemetry/browser/browser.toml
@@ -237,6 +237,38 @@ browser_glean_telemetry_disable
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+debug
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 browser_glean_telemetry_engagement_available_semantic
