--- a/browser/extensions/formautofill/test/browser/browser.toml
+++ b/browser/extensions/formautofill/test/browser/browser.toml
@@ -155,6 +155,17 @@ browser_autocomplete_footer
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+verify
+-
+standalone
+"
+]
 [
 "
 browser_autocomplete_marked_back_forward
@@ -395,12 +406,6 @@ if
 =
 [
 "
-win11_2009
-"
-#
-Bug
-1797751
-"
 os
 =
 =
@@ -411,6 +416,49 @@ linux
 #
 Bug
 1788900
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+socketprocess_networking
+&
+&
+verify
+-
+standalone
+"
+"
+win11_2009
+"
+#
+Bug
+1797751
 ]
 [
 "
