--- a/browser/extensions/formautofill/test/browser/creditCard/browser.toml
+++ b/browser/extensions/formautofill/test/browser/creditCard/browser.toml
@@ -159,6 +159,46 @@ os
 =
 =
 '
+linux
+'
+&
+&
+os_version
+=
+=
+'
+24
+.
+04
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+a11y_checks
+&
+&
+swgl
+&
+&
+verify
+-
+standalone
+"
+"
+os
+=
+=
+'
 mac
 '
 &
