--- a/browser/modules/test/browser/browser.toml
+++ b/browser/modules/test/browser/browser.toml
@@ -353,6 +353,38 @@ js
 https_first_disabled
 =
 true
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+opt
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 browser_UsageTelemetry_private_and_restore
