--- a/docshell/test/browser/browser.toml
+++ b/docshell/test/browser/browser.toml
@@ -939,6 +939,11 @@ if
 =
 [
 "
+verify
+-
+standalone
+"
+"
 os
 =
 =
@@ -967,10 +972,10 @@ aarch64
 &
 opt
 "
-]
 #
 Bug
 1775923
+]
 [
 "
 browser_bug422543
@@ -987,173 +992,31 @@ if
 =
 [
 "
-os
-=
-=
-'
-linux
-'
-&
-&
-os_version
-=
-=
-'
-18
-.
-04
-'
-&
-&
-processor
-=
-=
-'
-x86_64
-'
-&
-&
 asan
 "
+]
 #
 Bug
 1933429
+[
 "
-os
-=
-=
-'
-linux
-'
-&
-&
-os_version
-=
-=
-'
-18
+browser_bug441169
 .
-04
-'
-&
-&
-processor
-=
-=
-'
-x86_64
-'
-&
-&
-tsan
+js
 "
-#
-Bug
-1933429
+]
+[
 "
-os
-=
-=
-'
-linux
-'
-&
-&
-os_version
-=
-=
-'
-18
+browser_bug503832
 .
-04
-'
-&
-&
-processor
-=
-=
-'
-x86_64
-'
-&
-&
-debug
+js
 "
-#
-Bug
-1933429
-"
-os
+]
+skip
+-
+if
 =
-=
-'
-linux
-'
-&
-&
-os_version
-=
-=
-'
-24
-.
-04
-'
-&
-&
-processor
-=
-=
-'
-x86_64
-'
-&
-&
-display
-=
-=
-'
-x11
-'
-&
-&
-asan
-"
-#
-Bug
-1933429
-"
-os
-=
-=
-'
-win
-'
-&
-&
-os_version
-=
-=
-'
-11
-.
-2009
-'
-&
-&
-processor
-=
-=
-'
-x86_64
-'
-&
-&
-asan
-"
-#
-Bug
-1933429
+[
 "
 os
 =
@@ -1173,7 +1036,7 @@ os_version
 '
 &
 &
-processor
+arch
 =
 =
 '
@@ -1181,24 +1044,15 @@ x86_64
 '
 &
 &
-asan
-"
-#
-Bug
-1933429
-]
-[
-"
-browser_bug441169
-.
-js
-"
-]
-[
-"
-browser_bug503832
-.
-js
+debug
+&
+&
+msix
+&
+&
+verify
+-
+standalone
 "
 ]
 [
@@ -1534,6 +1388,17 @@ browser_bug1716290
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+verify
+-
+standalone
+"
+]
 [
 "
 browser_bug1716290
@@ -1773,13 +1638,6 @@ https_first_disabled
 true
 [
 "
-browser_loadURI_postdata
-.
-js
-"
-]
-[
-"
 browser_loadURI_forceMediaDocument
 .
 js
@@ -1794,6 +1652,13 @@ files
 file_image_header
 .
 sjs
+"
+]
+[
+"
+browser_loadURI_postdata
+.
+js
 "
 ]
 [
