--- a/docshell/test/navigation/mochitest.toml
+++ b/docshell/test/navigation/mochitest.toml
@@ -988,13 +988,12 @@ test_bug1699721
 html
 "
 ]
-skip
+run
 -
 if
 =
 [
 "
-!
 fission
 "
 ]
@@ -1006,6 +1005,17 @@ only
 process
 switching
 behaviour
+skip
+-
+if
+=
+[
+"
+verify
+-
+standalone
+"
+]
 [
 "
 test_bug1706090
