--- a/dom/events/test/mochitest.toml
+++ b/dom/events/test/mochitest.toml
@@ -2510,6 +2510,43 @@ android
 &
 verify
 "
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+xorigin
+&
+&
+verify
+-
+standalone
+"
 ]
 [
 "
@@ -2919,6 +2956,12 @@ debug
 Bug
 1781668
 "
+http2
+"
+"
+http3
+"
+"
 os
 =
 =
@@ -2958,10 +3001,9 @@ wayland
 Bug
 1857022
 "
-http3
-"
-"
-http2
+verify
+-
+standalone
 "
 ]
 [
@@ -3326,3 +3368,14 @@ isn
 '
 t
 supported
+skip
+-
+if
+=
+[
+"
+verify
+-
+standalone
+"
+]
