--- a/dom/media/mediasource/test/mochitest.toml
+++ b/dom/media/mediasource/test/mochitest.toml
@@ -2367,6 +2367,38 @@ test_Resolution_change_should_not_cause_video_freeze
 html
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+opt
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 test_ResumeAfterClearing_mp4
