--- a/dom/media/test/mochitest_compat.toml
+++ b/dom/media/test/mochitest_compat.toml
@@ -8942,6 +8942,49 @@ test_mozHasAudio
 html
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+wmfme
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 test_mp3_with_multiple_ID3v2
