--- a/dom/media/webspeech/synth/test/startup/mochitest.toml
+++ b/dom/media/webspeech/synth/test/startup/mochitest.toml
@@ -29,3 +29,35 @@ test_voiceschanged
 html
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+opt
+&
+&
+verify
+-
+standalone
+"
+]
