--- a/dom/security/test/csp/mochitest.toml
+++ b/dom/security/test/csp/mochitest.toml
@@ -1854,10 +1854,15 @@ if
 =
 [
 "
+http2
+"
+"
 http3
 "
 "
-http2
+verify
+-
+standalone
 "
 ]
 [
@@ -1893,6 +1898,80 @@ html
 test_bug910139
 .
 html
+"
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+22
+.
+04
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+verify
+-
+standalone
+"
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+verify
+-
+standalone
 "
 ]
 [
