--- a/dom/tests/mochitest/pointerlock/mochitest.toml
+++ b/dom/tests/mochitest/pointerlock/mochitest.toml
@@ -359,35 +359,6 @@ os
 =
 =
 '
-linux
-'
-&
-&
-os_version
-=
-=
-'
-22
-.
-04
-'
-&
-&
-display
-=
-=
-'
-wayland
-'
-"
-#
-Bug
-1857057
-"
-os
-=
-=
-'
 android
 '
 "
@@ -426,6 +397,35 @@ opt
 #
 Bug
 1897207
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+22
+.
+04
+'
+&
+&
+display
+=
+=
+'
+wayland
+'
+"
+#
+Bug
+1857057
 "
 os
 =
@@ -557,4 +557,41 @@ opt
 #
 Bug
 1897207
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+xorigin
+&
+&
+verify
+-
+standalone
+"
 ]
