--- a/gfx/layers/apz/test/mochitest/mochitest.toml
+++ b/gfx/layers/apz/test/mochitest/mochitest.toml
@@ -678,6 +678,25 @@ test_group_keyboard
 html
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 test_group_keyboard
@@ -1519,6 +1538,40 @@ os_version
 =
 =
 '
+22
+.
+04
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+verify
+-
+standalone
+"
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
 24
 .
 04
@@ -1543,10 +1596,10 @@ x11
 &
 debug
 "
-]
 #
 Bug
 1915078
+]
 [
 "
 test_group_touchevents
