--- a/image/test/mochitest/mochitest.toml
+++ b/image/test/mochitest/mochitest.toml
@@ -1014,10 +1014,44 @@ if
 =
 [
 "
+http2
+"
+"
 http3
 "
 "
-http2
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+22
+.
+04
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+verify
+-
+standalone
 "
 ]
 [
