--- a/layout/generic/test/mochitest.toml
+++ b/layout/generic/test/mochitest.toml
@@ -925,6 +925,20 @@ test_intrinsic_size_on_loading
 html
 "
 ]
+skip
+-
+if
+=
+[
+"
+xorigin
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 test_key_enter_open_second_summary
