--- a/netwerk/test/browser/browser.toml
+++ b/netwerk/test/browser/browser.toml
@@ -596,6 +596,40 @@ os_version
 '
 &
 &
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+verify
+-
+standalone
+"
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
 processor
 =
 =
@@ -1060,6 +1094,13 @@ js
 ]
 [
 "
+browser_fetch_after_suspending_request
+.
+js
+"
+]
+[
+"
 browser_fetch_lnk
 .
 js
@@ -1266,6 +1307,17 @@ file_favicon
 html
 "
 ]
+skip
+-
+if
+=
+[
+"
+verify
+-
+standalone
+"
+]
 [
 "
 browser_test_file_channel_observer
@@ -1337,5 +1389,45 @@ sjs
 browser_test_offline_tab
 .
 js
+"
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+verify
+-
+standalone
 "
 ]
