--- a/security/manager/ssl/tests/mochitest/browser/browser.toml
+++ b/security/manager/ssl/tests/mochitest/browser/browser.toml
@@ -92,6 +92,17 @@ browser_clientAuthRememberService
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+verify
+-
+standalone
+"
+]
 [
 "
 browser_clientAuth_connection
@@ -137,6 +148,43 @@ skip
 if
 =
 [
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+msix
+&
+&
+verify
+-
+standalone
+"
 "
 socketprocess_networking
 "
