--- a/testing/mochitest/tests/browser/browser.toml
+++ b/testing/mochitest/tests/browser/browser.toml
@@ -109,6 +109,17 @@ browser_fail
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+verify
+-
+standalone
+"
+]
 [
 "
 browser_fail_add_task
@@ -116,11 +127,128 @@ browser_fail_add_task
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+24
+.
+04
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+socketprocess_networking
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 browser_fail_add_task_uncaught_rejection
 .
 js
+"
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86
+'
+&
+&
+debug
+&
+&
+verify
+-
+standalone
+"
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+verify
+-
+standalone
 "
 ]
 [
@@ -153,6 +281,49 @@ browser_fail_throw
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+socketprocess_networking
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 browser_fail_timeout
@@ -181,6 +352,17 @@ browser_fail_uncaught_rejection
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+verify
+-
+standalone
+"
+]
 [
 "
 browser_fail_uncaught_rejection_expected
@@ -188,11 +370,131 @@ browser_fail_uncaught_rejection_expected
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+24
+.
+04
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+swgl
+&
+&
+verify
+-
+standalone
+"
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+socketprocess_networking
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 browser_fail_uncaught_rejection_expected_multi
 .
 js
+"
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+verify
+-
+standalone
 "
 ]
 [
