--- a/toolkit/components/aboutthirdparty/tests/browser/browser.toml
+++ b/toolkit/components/aboutthirdparty/tests/browser/browser.toml
@@ -21,7 +21,6 @@ if
 =
 [
 "
-(
 os
 =
 =
@@ -30,7 +29,29 @@ win
 '
 &
 &
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
 asan
-)
+"
+"
+os
+=
+=
+'
+win
+'
+&
+&
+verify
+-
+standalone
 "
 ]
