--- a/toolkit/components/aboutwebauthn/tests/browser/browser.toml
+++ b/toolkit/components/aboutwebauthn/tests/browser/browser.toml
@@ -99,3 +99,49 @@ browser_aboutwebauthn_pin
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+24
+.
+04
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+a11y_checks
+&
+&
+swgl
+&
+&
+verify
+-
+standalone
+"
+]
