--- a/toolkit/components/antitracking/test/browser/browser.toml
+++ b/toolkit/components/antitracking/test/browser/browser.toml
@@ -2039,6 +2039,20 @@ file_stripping
 html
 "
 ]
+skip
+-
+if
+=
+[
+"
+opt
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 browser_urlQueryStringStrippingWithEncoding
