--- a/toolkit/components/doh/test/browser/browser.toml
+++ b/toolkit/components/doh/test/browser/browser.toml
@@ -117,6 +117,20 @@ browser_trrSelect
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+socketprocess_networking
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 browser_trrSelection_disable
