--- a/toolkit/components/passwordmgr/test/browser/browser.toml
+++ b/toolkit/components/passwordmgr/test/browser/browser.toml
@@ -407,6 +407,37 @@ os_version
 '
 &
 &
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+verify
+-
+standalone
+"
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+24
+.
+04
+'
+&
+&
 processor
 =
 =
@@ -722,6 +753,38 @@ Bug
 browser_context_menu
 .
 js
+"
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+opt
+&
+&
+verify
+-
+standalone
 "
 ]
 [
@@ -1969,6 +2032,29 @@ os
 '
 android
 '
+"
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+verify
+-
+standalone
 "
 ]
 [
