--- a/toolkit/components/passwordmgr/test/mochitest/mochitest.toml
+++ b/toolkit/components/passwordmgr/test/mochitest/mochitest.toml
@@ -1206,6 +1206,17 @@ scheme
 "
 https
 "
+support
+-
+files
+=
+[
+"
+form_basic_bfcache
+.
+html
+"
+]
 skip
 -
 if
@@ -1222,16 +1233,42 @@ android
 #
 bug
 1527403
-]
-support
--
-files
-=
-[
 "
-form_basic_bfcache
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+24
 .
-html
+04
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+xorigin
+&
+&
+verify
+-
+standalone
 "
 ]
 [
