--- a/toolkit/components/places/tests/browser/browser.toml
+++ b/toolkit/components/places/tests/browser/browser.toml
@@ -144,6 +144,17 @@ js
 https_first_disabled
 =
 true
+skip
+-
+if
+=
+[
+"
+verify
+-
+standalone
+"
+]
 [
 "
 browser_bug1601563
@@ -317,6 +328,46 @@ files
 empty_page
 .
 html
+"
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+24
+.
+04
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+swgl
+&
+&
+verify
+-
+standalone
 "
 ]
 [
@@ -619,7 +670,41 @@ asan
 tsan
 )
 "
-]
 #
 Bug
 1891145
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+verify
+-
+standalone
+"
+]
