--- a/toolkit/components/prompts/test/mochitest.toml
+++ b/toolkit/components/prompts/test/mochitest.toml
@@ -125,11 +125,26 @@ test_subresources_prompts
 html
 "
 ]
+fail
+-
+if
+=
+[
+"
+xorigin
+"
+]
 skip
 -
 if
 =
 [
+"
+http2
+"
+"
+http3
+"
 "
 os
 =
@@ -139,18 +154,8 @@ android
 '
 "
 "
-http3
-"
-"
-http2
-"
-]
-fail
+verify
 -
-if
-=
-[
-"
-xorigin
+standalone
 "
 ]
