--- a/toolkit/components/satchel/test/browser/browser.toml
+++ b/toolkit/components/satchel/test/browser/browser.toml
@@ -48,10 +48,32 @@ browser_popup_mouseover
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+verify
+-
+standalone
+"
+]
 [
 "
 browser_privbrowsing_perwindowpb
 .
 js
+"
+]
+skip
+-
+if
+=
+[
+"
+verify
+-
+standalone
 "
 ]
