--- a/toolkit/content/tests/browser/datetime/browser.toml
+++ b/toolkit/content/tests/browser/datetime/browser.toml
@@ -678,30 +678,6 @@ if
 =
 [
 "
-tsan
-"
-#
-Frequently
-times
-out
-on
-TSan
-"
-os
-=
-=
-'
-win
-'
-&
-&
-asan
-"
-#
-fails
-on
-asan
-"
 os
 =
 =
@@ -725,6 +701,70 @@ frequency
 intermittent
 Bug
 1673140
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+24
+.
+04
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+a11y_checks
+&
+&
+swgl
+&
+&
+verify
+-
+standalone
+"
+"
+os
+=
+=
+'
+win
+'
+&
+&
+asan
+"
+#
+fails
+on
+asan
+"
+tsan
+"
+#
+Frequently
+times
+out
+on
+TSan
 ]
 [
 "
