--- a/toolkit/mozapps/extensions/test/browser/browser.toml
+++ b/toolkit/mozapps/extensions/test/browser/browser.toml
@@ -495,6 +495,52 @@ head_disco
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+24
+.
+04
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+a11y_checks
+&
+&
+swgl
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 browser_html_discover_view_clientid
@@ -793,6 +839,17 @@ js
 browser_installssl
 .
 js
+"
+]
+skip
+-
+if
+=
+[
+"
+verify
+-
+standalone
 "
 ]
 [
