--- a/browser/base/content/test/scroll-to-text-fragment/browser.toml
+++ b/browser/base/content/test/scroll-to-text-fragment/browser.toml
@@ -119,6 +119,40 @@ opt
 #
 Bug
 1983146
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+verify
+-
+standalone
+"
 ]
 [
 "
