--- a/browser/components/sessionstore/test/browser.toml
+++ b/browser/components/sessionstore/test/browser.toml
@@ -1202,7 +1202,7 @@ x86_64
 '
 &
 &
-opt
+asan
 "
 #
 Bug
@@ -1234,7 +1234,7 @@ x86_64
 '
 &
 &
-asan
+opt
 "
 #
 Bug
@@ -1317,6 +1317,41 @@ in
 failures
 "
 jobs
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+14
+.
+70
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+socketprocess_networking
+"
+#
+Bug
+1868915
 "
 os
 =
@@ -1446,6 +1481,43 @@ os_version
 '
 &
 &
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+socketprocess_networking
+&
+&
+verify
+-
+standalone
+"
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
 processor
 =
 =
@@ -1459,41 +1531,6 @@ opt
 #
 Bug
 1775605
-"
-os
-=
-=
-'
-mac
-'
-&
-&
-os_version
-=
-=
-'
-14
-.
-70
-'
-&
-&
-processor
-=
-=
-'
-x86_64
-'
-&
-&
-opt
-&
-&
-socketprocess_networking
-"
-#
-Bug
-1868915
 ]
 [
 "
@@ -1522,6 +1559,39 @@ js
 browser_multiple_select_after_load
 .
 js
+"
+]
+[
+"
+browser_navigation_api_restore
+.
+js
+"
+]
+support
+-
+files
+=
+[
+"
+empty_frame
+.
+html
+"
+"
+entry1
+.
+html
+"
+"
+entry2
+.
+html
+"
+"
+entry3
+.
+html
 "
 ]
 [
@@ -2021,6 +2091,40 @@ socketprocess_networking
 #
 Bug
 1848488
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86
+'
+&
+&
+debug
+&
+&
+verify
+-
+standalone
+"
 "
 os
 =
