--- a/browser/extensions/newtab/test/browser/browser.toml
+++ b/browser/extensions/newtab/test/browser/browser.toml
@@ -168,6 +168,35 @@ browser_SmartShortcuts
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 browser_TrendingSearch
