--- a/dom/animation/test/mochitest.toml
+++ b/dom/animation/test/mochitest.toml
@@ -523,6 +523,49 @@ test_event_listener_leaks
 html
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+xorigin
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 mozilla
