--- a/dom/base/test/fullscreen/mochitest.toml
+++ b/dom/base/test/fullscreen/mochitest.toml
@@ -481,6 +481,12 @@ if
 =
 [
 "
+http2
+"
+"
+http3
+"
+"
 os
 =
 =
@@ -488,6 +494,35 @@ os
 android
 '
 "
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+22
+.
+04
+'
+&
+&
+display
+=
+=
+'
+wayland
+'
+"
+#
+Bug
+1857240
 "
 os
 =
@@ -523,41 +558,6 @@ os
 =
 =
 '
-linux
-'
-&
-&
-os_version
-=
-=
-'
-22
-.
-04
-'
-&
-&
-display
-=
-=
-'
-wayland
-'
-"
-#
-Bug
-1857240
-"
-http3
-"
-"
-http2
-"
-"
-os
-=
-=
-'
 mac
 '
 &
@@ -582,6 +582,43 @@ x86_64
 #
 Bug
 1929452
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+xorigin
+&
+&
+verify
+-
+standalone
+"
 ]
 [
 "
