--- a/dom/base/test/mochitest.toml
+++ b/dom/base/test/mochitest.toml
@@ -1461,6 +1461,46 @@ slow
 sjs
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+24
+.
+04
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 test_EventSource_redirects
@@ -3144,6 +3184,17 @@ html
 test_bug513194
 .
 html
+"
+]
+skip
+-
+if
+=
+[
+"
+verify
+-
+standalone
 "
 ]
 [
@@ -7645,10 +7696,18 @@ if
 =
 [
 "
+http2
+"
+"
 http3
 "
 "
-http2
+debug
+&
+&
+verify
+-
+standalone
 "
 ]
 [
