--- a/dom/messagechannel/tests/mochitest.toml
+++ b/dom/messagechannel/tests/mochitest.toml
@@ -91,10 +91,47 @@ bits
 =
 64
 "
-]
 #
 Bug
 1777087
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+xorigin
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 test_messageChannel
