--- a/dom/tests/mochitest/beacon/mochitest.toml
+++ b/dom/tests/mochitest/beacon/mochitest.toml
@@ -99,6 +99,11 @@ http2
 http3
 "
 "
+verify
+-
+standalone
+"
+"
 os
 =
 =
@@ -179,10 +184,81 @@ if
 =
 [
 "
+http2
+"
+"
 http3
 "
 "
-http2
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+22
+.
+04
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+verify
+-
+standalone
+"
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+xorigin
+&
+&
+verify
+-
+standalone
 "
 ]
 [
