--- a/toolkit/components/media/tests/browser.toml
+++ b/toolkit/components/media/tests/browser.toml
@@ -34,3 +34,43 @@ browser_windowsMediaFoundationCDMOriginsListService
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+verify
+-
+standalone
+"
+]
