--- a/toolkit/components/pictureinpicture/tests/browser.toml
+++ b/toolkit/components/pictureinpicture/tests/browser.toml
@@ -1756,6 +1756,43 @@ x86_64
 Bug
 1833445
 "
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+msix
+&
+&
+verify
+-
+standalone
+"
+"
 win11_2009
 &
 &
