--- a/toolkit/components/thumbnails/test/browser.toml
+++ b/toolkit/components/thumbnails/test/browser.toml
@@ -76,6 +76,35 @@ browser_thumbnails_bg_basic
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 browser_thumbnails_bg_captureIfMissing
