--- a/toolkit/mozapps/downloads/tests/browser/browser.toml
+++ b/toolkit/mozapps/downloads/tests/browser/browser.toml
@@ -45,6 +45,46 @@ browser_save_wrongextension
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+26100
+'
+&
+&
+arch
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+verify
+-
+standalone
+"
+]
 [
 "
 browser_unknownContentType_blob
