Bug 1751335 - Adding right-click select on text in macOS r=masayuki
Differential Revision: https://phabricator.services.mozilla.com/D263429

UltraBlame original commit: 68a262f8302c5abb1ec2a87ef7e15bc33eb22cb4

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -112970,6 +112970,83 @@ mirror
 :
 always
 #
+When
+true
+right
+-
+clicking
+selects
+the
+word
+/
+link
+under
+the
+cursor
+.
+-
+name
+:
+ui
+.
+mouse
+.
+right_click
+.
+select_under_cursor
+type
+:
+bool
+#
+ifdef
+XP_MACOSX
+value
+:
+EARLY_BETA_OR_EARLIER
+#
+else
+value
+:
+false
+#
+endif
+mirror
+:
+always
+#
+When
+true
+right
+-
+clicking
+selects
+the
+word
+under
+the
+cursor
+in
+editable
+-
+name
+:
+ui
+.
+mouse
+.
+right_click
+.
+select_in_editable
+type
+:
+bool
+value
+:
+false
+mirror
+:
+always
+#
 -
 -
 -
