Bug 1995655 - Update email used for telemetry alerting in netwerk probe. r=necko-reviewers,valentin DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D269502

UltraBlame original commit: 0c70c32d5cfcdce832334f0f88da4089a53aa5b5

--- a/netwerk/metrics.yaml
+++ b/netwerk/metrics.yaml
@@ -2246,7 +2246,7 @@ mozilla
 com
 expires
 :
-147
+157
 labels
 :
 -
@@ -9192,8 +9192,8 @@ True
 bugzilla_notification_emails
 :
 -
-gmierz2
-outlook
+gmierzwinski
+mozilla
 .
 com
 http_channel_sub_open_to_first_sent
