--- a/toolkit/components/nimbus/FeatureManifest.yaml
+++ b/toolkit/components/nimbus/FeatureManifest.yaml
@@ -30903,6 +30903,234 @@ rather
 than
 use
 ML
+externalLinkHandling
+:
+description
+:
+Controls
+how
+externally
+-
+opened
+URLs
+will
+be
+handled
+by
+Firefox
+.
+owner
+:
+sthompson
+mozilla
+.
+com
+hasExposure
+:
+true
+exposureDescription
+:
+>
+-
+Exposure
+is
+recorded
+when
+a
+user
+clicks
+on
+a
+link
+outside
+of
+Firefox
+and
+that
+link
+is
+opened
+by
+Firefox
+.
+variables
+:
+openBehavior
+:
+description
+:
+>
+-
+Control
+how
+external
+links
+from
+another
+application
+should
+be
+opened
+in
+Firefox
+.
+See
+the
+nsIBrowserDOMWindow
+OPEN_
+*
+constants
+for
+what
+the
+values
+can
+do
+.
+The
+default
+value
+for
+the
+backing
+pref
+is
+-
+1
+.
+When
+that
+pref
+has
+the
+default
+value
+the
+code
+will
+fall
+back
+to
+the
+value
+of
+the
+general
+pref
+that
+handles
+opening
+links
+i
+.
+e
+.
+browser
+.
+link
+.
+open_newwindow
+which
+defaults
+to
+3
+.
+type
+:
+int
+enum
+:
+-
+-
+1
+#
+use
+default
+browser
+behavior
+-
+2
+#
+OPEN_NEWWINDOW
+open
+external
+links
+in
+a
+new
+window
+-
+3
+#
+OPEN_NEWTAB
+open
+in
+a
+new
+tab
+in
+the
+topmost
+window
+at
+the
+end
+of
+the
+tab
+strip
+-
+6
+#
+OPEN_NEWTAB_FOREGROUND
+open
+in
+a
+new
+tab
+in
+the
+topmost
+window
+at
+the
+end
+of
+the
+tab
+strip
+and
+select
+it
+-
+7
+#
+OPEN_NEWTAB_AFTER_CURRENT
+open
+in
+a
+new
+tab
+in
+the
+topmost
+window
+next
+to
+the
+active
+tab
+fallbackPref
+:
+browser
+.
+link
+.
+open_newwindow
+.
+override
+.
+external
 smartblockEmbeds
 :
 description
