Bug 1995541 - Do not indefinitely attempt to launch non-content child processes if they fail with STARTED_BUSY. r=geckoview-reviewers,toolkit-telemetry-reviewers,janerik,tcampbell
On Android it is not possible to run multiple instances of non-content
child processes, as we have only declared a single service of each
type in the manifest. This is fine in normal operation as there only
needs to be a single instance of each, but for xpcshell tests and
certain geckoview-junit tests we run multiple GeckoRuntimes in
parallel, each of which will attempt to launch its own child
processes.

Currently when a child process launch fails with a STARTED_BUSY error
code we will indefinitely retry launching it. This works for content
processes as eventually we will find a service that is not in use, but
for non-content process this will never succeed. We end up spamming
the logcat with error messages, and eventually the parent process will
get killed by the OS for making too many binder requests.

In bug 1844829 we will implement a proper solution to allow multiple
instances of these processes. But in the meantime, this patch makes us
avoid indefinitely retrying to launch busy non-content child
processes. This does mean that child processes will quickly fail to
launch in certain tests, which is not ideal. But it is an improvement
on the current situation where they never successfully launch anyway,
and instead are stuck in a loop attempting to launch until either the
test completes or the process is killed.

This causes certain legacy telemetry tests to now fail on CI. In
reality these tests were already broken, but (after an increased
timeout) were incorrectly being marked as passing due to the process
eventually being killed. Legacy telemetry is not used on Android, so
these tests are now disabled.

Differential Revision: https://phabricator.services.mozilla.com/D269561

UltraBlame original commit: 61e23be0aee4d57876da4eea743abfedb57dffa9

--- a/toolkit/components/telemetry/tests/unit/xpcshell.toml
+++ b/toolkit/components/telemetry/tests/unit/xpcshell.toml
@@ -197,11 +197,26 @@ test_CoveragePing
 js
 "
 ]
-requesttimeoutfactor
+skip
+-
+if
 =
-5
+[
+"
+os
+=
+=
+'
+android
+'
+"
+]
 #
-Slow
+Legacy
+telemetry
+is
+always
+disabled
 on
 Android
 [
@@ -211,11 +226,26 @@ test_EventPing
 js
 "
 ]
-requesttimeoutfactor
+skip
+-
+if
 =
-5
+[
+"
+os
+=
+=
+'
+android
+'
+"
+]
 #
-Slow
+Legacy
+telemetry
+is
+always
+disabled
 on
 Android
 tags
@@ -275,11 +305,26 @@ test_MigratePendingPings
 js
 "
 ]
-requesttimeoutfactor
+skip
+-
+if
 =
-3
+[
+"
+os
+=
+=
+'
+android
+'
+"
+]
 #
-Slow
+Legacy
+telemetry
+is
+always
+disabled
 on
 Android
 [
@@ -289,11 +334,26 @@ test_PingAPI
 js
 "
 ]
-requesttimeoutfactor
+skip
+-
+if
 =
-3
+[
+"
+os
+=
+=
+'
+android
+'
+"
+]
 #
-Slow
+Legacy
+telemetry
+is
+always
+disabled
 on
 Android
 [
@@ -553,11 +613,26 @@ test_TelemetryController_idle
 js
 "
 ]
-requesttimeoutfactor
+skip
+-
+if
 =
-3
+[
+"
+os
+=
+=
+'
+android
+'
+"
+]
 #
-Slow
+Legacy
+telemetry
+is
+always
+disabled
 on
 Android
 [
@@ -892,11 +967,26 @@ test_TelemetrySession_activeTicks
 js
 "
 ]
-requesttimeoutfactor
+skip
+-
+if
 =
-3
+[
+"
+os
+=
+=
+'
+android
+'
+"
+]
 #
-Slow
+Legacy
+telemetry
+is
+always
+disabled
 on
 Android
 [
