Bug 1995531 - Update metadata for testing/web-platform/meta/wasm/core/relaxed-simd/.
Differential Revision: https://phabricator.services.mozilla.com/D269589

UltraBlame original commit: c1924f789ebdb0c34918550ac9c45b9c9785b85b

--- a/testing/web-platform/meta/wasm/core/relaxed-simd/i16x8_relaxed_q15mulr_s.wast.js.html.ini
+++ b/testing/web-platform/meta/wasm/core/relaxed-simd/i16x8_relaxed_q15mulr_s.wast.js.html.ini
@@ -34,8 +34,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -68,8 +80,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -95,8 +119,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -125,8 +161,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -148,8 +196,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -178,8 +238,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -201,8 +273,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
