--- a/testing/web-platform/meta/wasm/core/relaxed-simd/i32x4_relaxed_trunc.wast.js.html.ini
+++ b/testing/web-platform/meta/wasm/core/relaxed-simd/i32x4_relaxed_trunc.wast.js.html.ini
@@ -34,8 +34,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -68,8 +80,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -95,8 +119,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
