--- a/testing/web-platform/meta/wasm/core/relaxed-simd/relaxed_dot_product.wast.js.html.ini
+++ b/testing/web-platform/meta/wasm/core/relaxed-simd/relaxed_dot_product.wast.js.html.ini
@@ -34,8 +34,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -68,8 +80,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -95,8 +119,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -125,8 +161,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -148,8 +196,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -178,8 +238,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -201,8 +273,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -231,8 +315,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -254,8 +350,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -284,8 +392,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -307,8 +427,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -337,8 +469,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -360,8 +504,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -390,8 +546,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -413,8 +581,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -443,8 +623,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -466,8 +658,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
