--- a/testing/web-platform/meta/wasm/core/relaxed-simd/i8x16_relaxed_swizzle.wast.js.html.ini
+++ b/testing/web-platform/meta/wasm/core/relaxed-simd/i8x16_relaxed_swizzle.wast.js.html.ini
@@ -34,8 +34,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -68,8 +80,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -95,8 +119,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -125,8 +161,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -148,8 +196,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -178,8 +238,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -201,8 +273,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -231,8 +315,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -254,8 +350,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -284,12 +392,25 @@ os
 linux
 "
 )
-and
-tsan
 :
 [
 PASS
 FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+:
+[
+PASS
+FAIL
+]
 ]
 [
 #
@@ -307,8 +428,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -337,8 +470,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
@@ -360,8 +505,20 @@ os
 linux
 "
 )
-and
-tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 PASS
