Bug 1995791 - Update AC buildconfig.yml. r=android-reviewers,jonalmeida
Differential Revision: https://phabricator.services.mozilla.com/D269621

UltraBlame original commit: 3bec09b61e849ea8cd8d25d9d5c3e7f90c16ea29

--- a/mobile/android/android-components/.buildconfig.yml
+++ b/mobile/android/android-components/.buildconfig.yml
@@ -4304,6 +4304,12 @@ components
 :
 support
 -
+appservices
+-
+components
+:
+support
+-
 base
 -
 components
@@ -4697,6 +4703,12 @@ components
 :
 support
 -
+appservices
+-
+components
+:
+support
+-
 base
 -
 components
@@ -4957,6 +4969,12 @@ components
 service
 -
 location
+-
+components
+:
+support
+-
+appservices
 -
 components
 :
@@ -5428,6 +5446,12 @@ components
 :
 support
 -
+appservices
+-
+components
+:
+support
+-
 base
 -
 components
@@ -5645,6 +5669,12 @@ components
 service
 -
 location
+-
+components
+:
+support
+-
+appservices
 -
 components
 :
@@ -6728,6 +6758,12 @@ components
 :
 support
 -
+appservices
+-
+components
+:
+support
+-
 base
 -
 components
@@ -7416,6 +7452,12 @@ components
 service
 -
 location
+-
+components
+:
+support
+-
+appservices
 -
 components
 :
@@ -9675,6 +9717,12 @@ components
 service
 -
 location
+-
+components
+:
+support
+-
+appservices
 -
 components
 :
@@ -13662,6 +13710,12 @@ components
 lib
 -
 publicsuffixlist
+-
+components
+:
+support
+-
+appservices
 -
 components
 :
