Bug 1987909 - Add a browsertime smoke test to CI. r=mozperftest-reviewers,kshampur
Differential Revision: https://phabricator.services.mozilla.com/D264565

UltraBlame original commit: e6f3d797418000e69df36fe27faefd8e0a70db9d

--- a/taskcluster/kinds/perftest/macosx.yml
+++ b/taskcluster/kinds/perftest/macosx.yml
@@ -472,6 +472,155 @@ MOZ_FETCHES_DIR
 .
 /
 artifacts
+browsertime
+-
+sample
+:
+description
+:
+Run
+the
+sample
+browsertime
+sample
+test
+in
+CI
+treeherder
+:
+symbol
+:
+perftest
+(
+bt
+-
+sample
+)
+tier
+:
+2
+attributes
+:
+cron
+:
+false
+run
+-
+on
+-
+projects
+:
+[
+mozilla
+-
+central
+]
+run
+:
+command
+:
+>
+-
+mkdir
+-
+p
+MOZ_FETCHES_DIR
+/
+.
+.
+/
+artifacts
+&
+&
+cd
+MOZ_FETCHES_DIR
+&
+&
+python3
+-
+m
+venv
+.
+&
+&
+bin
+/
+python3
+python
+/
+mozperftest
+/
+mozperftest
+/
+runner
+.
+py
+-
+-
+browsertime
+-
+binary
+{
+MOZ_FETCHES_DIR
+}
+/
+target
+.
+dmg
+-
+-
+browsertime
+-
+node
+{
+MOZ_FETCHES_DIR
+}
+/
+node
+/
+bin
+/
+node
+-
+-
+flavor
+desktop
+-
+browser
+-
+-
+browsertime
+-
+geckodriver
+{
+MOZ_FETCHES_DIR
+}
+/
+geckodriver
+-
+-
+output
+MOZ_FETCHES_DIR
+/
+.
+.
+/
+artifacts
+python
+/
+mozperftest
+/
+mozperftest
+/
+tests
+/
+data
+/
+samples
+/
+perftest_example
+.
+js
 #
 We
 '
