Bug 1966704 - Update WPT expectations with new passes for relative selectors in at-scope. r=dshin
Differential Revision: https://phabricator.services.mozilla.com/D268953

UltraBlame original commit: bdc326802421cf0e47420d54ba04b0fe627ae76d

--- a/testing/web-platform/meta/css/css-cascade/scope-invalidation.html.ini
+++ b/testing/web-platform/meta/css/css-cascade/scope-invalidation.html.ini
@@ -6,65 +6,14 @@ invalidation
 html
 ]
 [
-Scope
-root
-with
 :
-has
+not
 (
-)
-]
-expected
-:
-FAIL
-[
-Scope
-root
-with
-:
-has
-(
-)
-:
 scope
-both
-subject
-and
-non
--
-subject
-]
-expected
-:
-FAIL
-[
-Scope
-root
-with
-:
-has
-(
 )
-:
-scope
-both
-subject
-and
-non
--
-subject
-]
-expected
-:
-FAIL
-[
-Scope
+in
 limit
-with
-:
-has
-(
-)
+ancestor
 ]
 expected
 :
