--- a/dom/media/test/mochitest_eme.toml
+++ b/dom/media/test/mochitest_eme.toml
@@ -7569,6 +7569,40 @@ https
 "
 [
 "
+test_eme_output_config_check
+.
+html
+"
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+android
+'
+"
+]
+#
+bug
+1900626
+:
+no
+clearkey
+on
+Android
+scheme
+=
+"
+https
+"
+[
+"
 test_eme_playback
 .
 html
