--- a/browser/components/genai/tests/browser/browser.toml
+++ b/browser/components/genai/tests/browser/browser.toml
@@ -335,6 +335,33 @@ js
 ]
 [
 "
+browser_link_preview_onboarding
+.
+js
+"
+]
+support
+-
+files
+=
+[
+"
+data
+/
+readableFr
+.
+html
+"
+"
+data
+/
+readableEn
+.
+html
+"
+]
+[
+"
 browser_link_preview_optin
 .
 js
